# MirrorAppInterviewTask

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  flake8
mirror_back/: .env.local  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  asgi.py  pyproject.toml  run.sh
mirror_back/src_mirror_back/app/: config.py  factory.py
mirror_back/src_mirror_back/app/api/: urls.py
mirror_back/src_mirror_back/app/api/rest/: routers.py
mirror_back/src_mirror_back/app/api/rest/schemas/requests/: __init__.py  executor.py  order.py
mirror_back/src_mirror_back/app/api/rest/schemas/responses/: health.py
mirror_back/src_mirror_back/app/api/rest/views/: __init__.py  health.py  order.py
mirror_back/src_mirror_back/app/db/creators/: __init__.py  exceptions.py  faker.py  meta_base.py
mirror_back/src_mirror_back/app/db/creators/models/: __init__.py  executor.py  order.py
mirror_back/src_mirror_back/app/db/orm/: __init__.py  executor.py  order.py
mirror_back/src_mirror_back/app/db/schemas/: __init__.py  executor.py  order.py
mirror_back/src_mirror_back/app/enums/: __init__.py  tools.py
mirror_back/src_mirror_back/app/extensions/: logging.py  sqlalchemy.py
mirror_back/src_mirror_back/app/utils/: async_partial.py
mirror_back/src_mirror_back/app/utils/pydantic/: __init__.py  id_schema.py  orm_schema.py  response_schema.py  timestamp_schema.py
mirror_back/src_mirror_back/app/utils/sqlalchemy/: __init__.py  association_column.py  base_model_mixin.py
mirror_back/src_mirror_back/app/utils/sqlalchemy/fields/: enum.py
mirror_back/src_mirror_back/migrations/: env.py
mirror_back/src_mirror_back/migrations/versions/: 159438923edd_add_breed_name_in_order.py  99ce70a6adda_create_default_executors.py  e9d49ed4384a_init_database.py  f31ca6908e8c_add_date_to_orders.py
mirror_back/src_mirror_back/tests/: __init__.py  conftest.py  pytest.ini
mirror_back/src_mirror_back/tests/fixtures/: executor.py  order.py
mirror_back/src_mirror_back/tests/test_app/test_api/: test_orders.py
